--- a/TEMA_2/index.html
+++ b/TEMA_2/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicio de ejemplo</title>
 </head>
+
 <body>
-    
+    <h1> Ejemplos tema 2 Lenguaje de Marcas </h1> <!-- para crear titulos ejemplo H1, H2, H3-->
+    <p>Esto es un <b> ejemplo </b></p>
+    <p>Estp es un ejemplo</p>
+
+    <!--  Esto es un comentario -->
+
+    <hr> <!-- para crear lineas horizontales por ejemplo para titulos -->
+    <h2>Ejemplo de imagen </h2>
+
+    <img src="./img/Lexus_LFA.jpg" alt="Imagen Lexus_LFA" title="Ejmplo de imagen" witdth="250px" height="250px">
+    <!-- el ./ servirá para encontrar el directorio donde buscaremos nuestra imagen y el alt es para darle un titulo a la imagen-->
+
+    <hr>
+    <h2> Ejemplo de estilo de párrafo</h2>
+
+    <p
+        style="color: aqua; font-size: 80px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; border: black 20px solid;">
+        Texto del párrafo</p>
+
+    <hr>
+    <h2>Ejemplo en elemento en bloque y en línea</h2>
+    <p> <b> Un párrafo es un elemento de bloque </b></p>
+    <a href="#">Un enlace es un elemento en línea </a>
+    <a href="#">Otro enlace en línea </a>
+
+    <p> En un párrafo <a href="./html/contacto.html"> el enlace </a> se comporta igual y sigue siendo un elemento en
+        línea</p>
 </body>
+
 </html>
