--- a/TEMA3-4-EJERCICIO/mi_perfil/index.html
+++ b/TEMA3-4-EJERCICIO/mi_perfil/index.html
@@ -76,12 +76,7 @@
    <!-- el "iframe" permite poner imagenes o pequeñas páginas web en vivo procedentes de otras páginas web para hacer más cómoda la investigación-->
     
    <h3> <b> En este enlace está mi repositorio donde encontrar mi github donde encontrar mi código fuente</b></h3>
-   <p> <a href=""</p>
-
-
-
-
-        
-
+   <p> <a href="https://github.com/acm0173/1-DAM_LMGSI_Adri-n/blob/main/TEMA3-4-EJERCICIO/mi_perfil/index.html"> Link Github</a></p>
+   
 </body>
 </html>
