--- a/TEMA5/Casopráctico1.html
+++ b/TEMA5/Casopráctico1.html
@@ -15,7 +15,7 @@
     } </style>
     <table>
         <thead>
-            <caption style="font-size: large;"> <b> ACTIVIDADES FORMATIVAS</b></caption>
+            <caption style="font-size: large;"> <b> ACTIVIDADES FORMATIVAS</b></caption> <!--Aquí le pong-->
         <tr>
            <th><b> Curso </b></th>
            <th><b> Horario </b></th>
