--- a/TEMA5 Ejemplo/Ejemplo2Form.html
+++ b/TEMA5 Ejemplo/Ejemplo2Form.html
@@ -4,16 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
 </head>
 <title> Formulario ejemplo 2 </title>
+
 <body>
     <form action="proceso.php" method="get">
-        <p> Nombre: <input type="text" name = "nombre" size = "50"> </p> 
-        <p> Contraseña: <input type = "password" name = "password" size = "22" maxlength="8" minlength="1"> </p>
-        <p> Comentario: <textarea name = "comentario" rows="4" cols="27"> </textarea></p>
-        <input type = "submit" value="Enviar">
+        <p> Nombre: <input type="text" name="nombre" size="50"> </p>
+        <p> Contraseña: <input type="password" name="password" size="22" maxlength="8" minlength="1"> </p>
+        <p> Comentario: <textarea name="comentario" rows="4" cols="27"> </textarea></p>
+        <!-- Para crear un comentario el cual es extendible y puedes escribir en él-->
+        <input type="submit" value="Enviar">
 
     </form>
 </body>
+
 </html>
