--- a/TEMA5/Tarea5.1.html
+++ b/TEMA5/Tarea5.1.html
@@ -13,36 +13,36 @@
     } </style>
     <table>
         <thead>
-            <caption style="font-size: large;"> <b> DATOS DE INTERÉS </b></caption> <!--Aquí le pong-->
+            <caption style="font-size: large;"> <b>VIDEOJUEGOS </b></caption> <!--Aquí le pong-->
         <tr>
-           <th><b> Estudios </b></th>
-           <th><b> Duración </b></th>
-           <th><b> Aula </b></th>
-           <th><b> Duración </b></th>
+           <th><b> Empresa </b></th>
+           <th><b> Videojuego </b></th>
+           <th><b> Año </b></th>
+           <th><b> Calificación </b></th>
         </tr>
          </thead>
             <tr>
-                <td>E.S.O</td>
-                <td>16:00 a 20:00</td>
+                <td>Sony</td>
+                <td>Final Fantasy VII</td>
                 <td>Aula 1</td>
                 <td>20 horas</td>
             </tr>
             <tr>
-                <td>Duración</td>
-                <td>9:00 a 12:00</td>
+                <td>Nintendo</td>
+                <td>Super Mario Galaxy 2</td>
                 <td>Aula 2</td>
                 <td>15 horas</td>
             </tr>
              <tr>
-                <td>Curso de Javascript</td>
-                <td rowspan="2">16:00 a 20:00</td> 
-                <td> Aula 3</td>
+                <td>Activision</td>
+                <td rowspan="2"> COD Black Ops 6</td> 
+                <td rowspan="2"> </td>
                 <td>20 horas</td>
             </tr>
             <tr>
-                <td>Curso de Jquery</td>
-                <td>Aula 4</td>
-                <td>20 horas</td>
+                <td>Blizzard</td>
+                <td>2024</td>
+                <td>83</td>
             </tr>
             <tfoot>
             <tr>
