--- a/TEMA5/Tarea5.1.html
+++ b/TEMA5/Tarea5.1.html
@@ -24,25 +24,26 @@
             <tr>
                 <td>Sony</td>
                 <td>Final Fantasy VII</td>
-                <td>Aula 1</td>
+                <td>1997</td>
                 <td>20 horas</td>
             </tr>
             <tr>
                 <td>Nintendo</td>
                 <td>Super Mario Galaxy 2</td>
-                <td>Aula 2</td>
+                <td>2010</td>
                 <td>15 horas</td>
             </tr>
              <tr>
                 <td>Activision</td>
                 <td rowspan="2"> COD Black Ops 6</td> 
-                <td rowspan="2"> </td>
+                <td rowspan="2"> 2024 </td>
                 <td>20 horas</td>
             </tr>
             <tr>
                 <td>Blizzard</td>
-                <td>2024</td>
-                <td>83</td>
+                <td>83/100</td>
+                
+                
             </tr>
             <tfoot>
             <tr>
