--- a/TEMA5 Ejemplo/Ejemplo1Form.html
+++ b/TEMA5 Ejemplo/Ejemplo1Form.html
@@ -17,7 +17,7 @@
         <p>
 
             <input type="radio" name="sexo" value="h"> Hombre
-            <input type="radio" name="sexo" value="h"> Mujer
+            <input type="radio" name="sexo" value="m"> Mujer
 
         </p>
         <input type="submit" value="Enviar">
