--- a/TEMA6/Preguntas frecuentes6.1.html
+++ b/TEMA6/Preguntas frecuentes6.1.html
@@ -24,6 +24,10 @@
         <summary> ¿Tu equipo favorito de fútbol?</summary>
         <p> <b> Mi equipo favorito es el F.C Barcelona</b></p>
     </details>
+    <hr>
+
+    <h2> <a href="file:///C:/Users/iYaki/OneDrive/Documentos/GitHub/1-DAM_LMGSI_Adri-n/TEMA6/Formulario6.1.html">
+            Volver al Formulario </a> </h2>
 
 
 
