--- a/TEMA6/videoysonido.html
+++ b/TEMA6/videoysonido.html
@@ -16,8 +16,11 @@
     <video width="384" height="288" controls preload poster="multimedia/Cruz Roja.png"> <!--"poster" haremos que el video tenga un poster de representación antes de reproducirse-->
          <source src="multimedia/pelicula.webm" type="video/webm">
          
+        </video>
 
-    </video>
+    <hr>
+    <h2> <a href="file:///C:/Users/iYaki/OneDrive/Documentos/GitHub/1-DAM_LMGSI_Adri-n/TEMA6/Formulario6.1.html">
+            Volver al Formulario </a> </h2>
 
    
     
