--- a/TEMA8/CasoViajesFrecuentes.html
+++ b/TEMA8/CasoViajesFrecuentes.html
@@ -45,11 +45,11 @@
             border: solid 1px black;
         }
 
-        tr:nth-child(even) {
+        tr:nth-child(even) { /*Los pares se colorearán con un color determinado*/
             background-color: #f2f2f2
         }
 
-        tr:hover {
+        tr:hover { /*cuando pones el cursor encima, se iluminará con el color que le pongas abajo*/
             background-color: rgb(150, 150, 175);
         }
     </style>
