--- a/TEMA8/CasoViajesFrecuentes.html
+++ b/TEMA8/CasoViajesFrecuentes.html
@@ -18,7 +18,8 @@
         table {
             border-collapse: collapse;
             width: 50%;
-            margin-left: 25%; /*porcentaje de margen*/
+            margin-left: 25%;
+            /*porcentaje de margen*/
             border: solid 3px black;
         }
 
@@ -33,7 +34,8 @@
 
         td {
             text-align: left;
-            padding: 8px; /*Separación de texto y la tabla, ensanchar columnas o filas*/
+            padding: 8px;
+            /*Separación de texto y la tabla, ensanchar columnas o filas*/
             font-size: 1.5rem;
         }
 
@@ -45,11 +47,13 @@
             border: solid 1px black;
         }
 
-        tr:nth-child(even) { /*Los pares se colorearán con un color determinado*/
+        tr:nth-child(even) {
+            /*Los pares se colorearán con un color determinado*/
             background-color: #f2f2f2
         }
 
-        tr:hover { /*cuando pones el cursor encima, se iluminará con el color que le pongas abajo*/
+        tr:hover {
+            /*cuando pones el cursor encima, se iluminará con el color que le pongas abajo*/
             background-color: rgb(150, 150, 175);
         }
     </style>
