--- a/TEMA8/CasoViajesFrecuentes.html
+++ b/TEMA8/CasoViajesFrecuentes.html
@@ -11,12 +11,12 @@
         #titulo {
             text-align: center;
             font-family: verdana;
-            letter-spacing: 3px;
+            letter-spacing: 3px; /*espacio entre letras*/
             color: blue;
         }
 
         table {
-            border-collapse: collapse;
+            border-collapse: collapse; /*borde que quita las barras que separa
             width: 50%;
             margin-left: 25%;
             /*porcentaje de margen*/
