--- a/TEMA8/CasoInicialAvión.html
+++ b/TEMA8/CasoInicialAvión.html
@@ -7,26 +7,31 @@
     <title>ITIRENARIO</title>
 
     <style>
-        * {
+        * { /*el asterisco significa que lo escrito en esta corchea afectará a todo la página entera*/
             box-sizing: border-box;
+            /*incluye el padding y el borde dentro del ancho*/
+            /*alto total del elemento lo que...*/
+            /*facilita el contro de tamaño de los elementos*/
         }
 
-        body {
+        body { /*aplica estilos al cuerpo del documento*/
             font-family: Verdana;
         }
 
-        #viaje {
+        #viaje { /*viaje es una de las id */
             background-image: url("./img/Avión\ de\ pasajeros.webp");
-            background-repeat: no-repeat; 
-            background-position: bottom; 
-            background-size: 600px 450px;
+            /*establece una imagen de fondo*/
+            background-repeat: no-repeat; /*Evita que la imagen se repita*/
+            background-position: bottom; /*Coloca la imagen de fondo en la parte inferior del contenedor (#viaje)*/
+
+            background-size: 600px 450px; /*Define el tamaño de la imagen de fondo*/
             width: 50%;
-            border: solid 2px chocolate;
+            border: solid 2px chocolate; /*Define un borde solido de 2 pixeles de color chocolate*/
             padding: 15px;
             margin-left: 25%;
         }
 
-        #apartadol {
+        #apartadol { /*apartado1 es otra de las id*/
             color: white;
             background-color: chocolate;
             padding: 5px;
@@ -42,9 +47,11 @@
 
         .contenido {
             
-            padding-left: 20px;
+            padding-left: 20px;/*Aplica un relleno de 20 pixeles a la izquierda*/
             padding-right: 20px;
             text-align: justify;
+            
+            /*Justifica el texto, distribuyendo el espacio entre palabras*/
         }
     </style>
 
