--- a/TEMA8/CasoViajesFrecuentes.html
+++ b/TEMA8/CasoViajesFrecuentes.html
@@ -9,6 +9,7 @@
 
     <style>
         #titulo {
+           /* text-transform: uppercase; */
             text-align: center;
             font-family: verdana;
             letter-spacing: 3px; /*espacio entre letras*/
