--- a/TEMA8/CasoInicialAvión.html
+++ b/TEMA8/CasoInicialAvión.html
@@ -17,7 +17,8 @@
 
         #viaje {
             background-image: url("./img/Avión\ de\ pasajeros.webp");
-            background-repeat: no-repeat; 
+            background-size: cover; /*Para cubrir todo el espacio */
+            background-repeat: no-repeat; /*No se repite la imagen */
             background-position: bottom; 
             background-size: 600px 450px;
             width: 50%;
